<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/coordinator"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".View.MainActivity">

        <LinearLayout
            android:id="@+id/saldo_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="18dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Stan konta"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100 zł"
                android:textStyle="bold"
                android:textSize="32sp"/>

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/tablica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/saldo_total"
            android:layout_marginTop="12dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.5"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/budżet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="200 zł"
                        android:textStyle="bold"
                        android:textSize="26sp"
                        android:textColor="@color/green"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Budżet"
                        android:textSize="14sp"
                        android:textAllCaps="true"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.5"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/wydatki"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="200 zł"
                        android:textStyle="bold"
                        android:textSize="26sp"
                        android:textColor="@color/red"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Wydatki"
                        android:textSize="14sp"
                        android:textAllCaps="true"/>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/widok_tytuł"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tablica"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:text="Transakcje"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/widok"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/widok_tytuł"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addTransakcjeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/ic_add"
            android:src="@drawable/ic_add"
            app:backgroundTint="@color/white"
            app:borderWidth="0dp" />

    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
